# PyCalendar

./: .coverage  .coveragerc  .gitignore  AGENDA_IMPROVEMENTS_V3.1.md  AGENDA_QUICK.md  AGENDA_REDESIGN.md  AGENDA_REDESIGN_SUMMARY.md  AGENDA_SIDEBAR_INTEGRATION.md  AGENDA_VIEW_IMPROVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  BUTTON_AUDIT.md  CONTRAINTES_README.md  CONTRIBUTING.md  CORRECTIONS_AGENDA_ERRORS.md  CORRECTIONS_SUMMARY.md  DEMARRAGE_RAPIDE.md  DESIGN_IMPROVEMENTS.md  DISPLAY_OPTIONS_FUNCTIONAL.md  DISPLAY_OPTIONS_GUIDE.md  DISPLAY_OPTIONS_QUICK_REF.md  DISPLAY_OPTIONS_SUMMARY.md  FORMAT_SOLUTION.md  GIT_RECAP.txt  GUIDE_GENERATION.md  GUIDE_UTILISATION.md  INDEX_DOCUMENTATION.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  POOLS_VIEW_CORRECTIONS.md  POOLS_VIEW_FINAL_UPDATES.md  POOLS_VIEW_QUICK_START.md  POOLS_VIEW_SUMMARY.md  QUICK_START.md  README.md  RECAPITULATIF_DONNEES.md  REORGANISATION_COMPLETE.md  RESUME_FINAL.txt  SIDEBAR_FEATURES.md  (+56 more)
backend/: README.md  __init__.py
configs/: config_hand.yaml  config_volley.yaml  config_volley_greedy.yaml  config_volley_long.yaml  default.yaml  default_greedy.yaml  test_semaine_min.yaml
constraints/: __init__.py  base.py  institution_constraints.py  schedule_constraints.py  team_constraints.py  venue_constraints.py
core/: __init__.py  calendar_manager.py  config.py  config_manager.py  models.py  solution_store.py  solution_store.py.backup  utils.py
data/: data_loader.py  data_source.py  transformers.py  validators.py
database/: pycalendar.db  pycalendar.db.bak
docs/: AGENDA_ENHANCED_V2.md  AGENDA_SIDE_BY_SIDE.md  AMELIORATIONS_INTERFACE.md  API_CLIENT_QUICK_REFERENCE.md  ARCHITECTURE.md  FILES_CREATED_TASK_1.8.md  FILTRES_ET_THEME_COMPLETS.md  FORMAT_V2_GUIDE.md  GUIDE_FILTRES.md  IMPLEMENTATION_TECHNIQUE.md  IMPORTATEUR_MATCHS_EXTERNES.md  MIGRATION_GUIDE.md  MIGRATION_V2_ANALYSIS.md  README_TASK_1.8.md  TASK_1.8_COMPLETE.md  TASK_1.8_INDEX.md  TASK_1.8_QUICKREF.md  TASK_1.8_STATS.md  TASK_1.8_SUMMARY.md  TASK_1.8_TESTS_REPORT.md  TASK_1.8_VISUAL.md  TASK_2.1_REACT_INIT_COMPLETE.md  TASK_2.2_TYPESCRIPT_TYPES_COMPLETE.md  TASK_2.3_API_CLIENT_COMPLETE.md  TASK_3.1_COMPLETE.md  TASK_3.1_SUMMARY.md
documentation/: CLI_SCRIPTS_GUIDE.md  FILES_CREATED_TASK_1.7.md  PHASE_1_BACKEND_COMPLETE.md  TASK_1.7_SCRIPTS_CLI_REPORT.md  TASK_1.7_SUMMARY.md
exporters/: excel_exporter.py
frontend/: AMÉLIORATIONS_MENU_TERMINÉES.md  CALENDAR_REDESIGN.md  DEBUG_DESIGN.md  GUIDE_UTILISATEUR.md  INTERFACE_IMPROVEMENTS.md  MENU_IMPROVEMENTS.md  README.md  README_MENU.md  README_SOLVER_FIX.md  RECAP.md  RECAP_MENU_IMPROVEMENTS.md  SOLVER_BUGS_FIX.md  SOLVER_FIX_SUMMARY.md  (+6 more)
(+337 files in other folders)
